--- a/requirements.txt
+++ b/requirements.txt
@@ -19,17 +19,24 @@ colorama==0.4.6
 flake8==7.1.2
     # via -r requirements.in
 flask==3.0.3
+    # via
+    #   -r requirements.in
+    #   flask-wtf
+flask-wtf==1.2.1
     # via -r requirements.in
 importlib-metadata==8.5.0
     # via flask
 itsdangerous==2.2.0
-    # via flask
+    # via
+    #   flask
+    #   flask-wtf
 jinja2==3.1.6
     # via flask
 markupsafe==2.1.5
     # via
     #   jinja2
     #   werkzeug
+    #   wtforms
 mccabe==0.7.0
     # via flake8
 mypy-extensions==1.1.0
@@ -70,5 +77,7 @@ typing-extensions==4.13.2
     #   pydantic-core
 werkzeug==3.0.6
     # via flask
+wtforms==3.1.2
+    # via flask-wtf
 zipp==3.20.2
     # via importlib-metadata
